--- a/CalculatorVladDanil/CalculatorVladDanil/CalculatorVladDanil.csproj
+++ b/CalculatorVladDanil/CalculatorVladDanil/CalculatorVladDanil.csproj
@@ -46,12 +46,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Addition.cs" />
+    <Compile Include="TwoArgumentsFactory.cs" />
+    <Compile Include="Substraction.cs" />
+    <Compile Include="Division.cs" />
+    <Compile Include="Multiplication.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="ITwoArguments.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
