--- a/CalculatorVladDanil/CalculatorVladDanil.Tests/CalculatorVladDanil.Tests.csproj
+++ b/CalculatorVladDanil/CalculatorVladDanil.Tests/CalculatorVladDanil.Tests.csproj
@@ -47,6 +47,7 @@
     <Compile Include="OneArgumentTests\Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TwoArgumentTests\AdditionTests.cs" />
+    <Compile Include="TwoArgumentTests\Addition2Tests.cs" />
     <Compile Include="TwoArgumentTests\SubstractionTests.cs" />
     <Compile Include="TwoArgumentTests\DivisionTests.cs" />
     <Compile Include="TwoArgumentTests\MultiplicationTests.cs" />
